SERVER-54915 Remove the Sharding Routing Info Stability DistLock