src/mongo/db/s/shardsvr_drop_collection_command.cpp
@@ -34,7 +34,6 @@
 #include "mongo/db/auth/authorization_session.h"
 #include "mongo/db/commands.h"
 #include "mongo/db/curop.h"
-#include "mongo/db/s/dist_lock_manager.h"
 #include "mongo/db/s/drop_collection_coordinator.h"
 #include "mongo/db/s/drop_collection_legacy.h"
 #include "mongo/db/s/sharding_state.h"
@@ -76,12 +75,6 @@ public:
                                   << opCtx->getWriteConcern().wMode,
                     opCtx->getWriteConcern().wMode == WriteConcernOptions::kMajority);
 
-            DistLockManager::ScopedDistLock dbDistLock(
-                uassertStatusOK(DistLockManager::get(opCtx)->lock(
-                    opCtx,
-                    DistLockManager::kShardingRoutingInfoFormatStabilityLockName,
-                    "dropCollection",
-                    DistLockManager::kDefaultLockTimeout)));
             bool useNewPath = [&] {
                 return feature_flags::gShardingFullDDLSupport.isEnabled(
                            serverGlobalParams.featureCompatibility) &&
